--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -1,9 +1,3 @@
-
-
-.reloading {
-  opacity: 0.3 !important;
-}
-
 .product-detail-section {
   width: 100%;
   margin: 2rem 0;
@@ -23,6 +17,10 @@
       text-align: center;
       text-shadow: none;
     }
+  }
+
+  .reloading {
+    opacity: .4s ease !important;
   }
 
   .details-container {
