--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -34,12 +34,24 @@
             </div>   
             
             <!-- Product rating / review -->
-            <star-rating [rating]="4.5"></star-rating>
+            <star-rating [rating]="4"></star-rating>
           </div>
 
           <variant-section 
             [variants]="variants"
             (variantId)="updateProductInfo($event)"></variant-section>
+
+          <div class="quantity-selector">
+            <button class="minus-btn">
+              <i class="material-icons">remove</i>
+            </button>
+
+            <div class="quantity">1</div>
+
+            <button class="plus-btn">
+              <i class="material-icons">add</i>
+            </button>
+          </div>
         </div>
   
         <div class="action-buttons">
