--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,20 @@ body {
   }
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] {
+  -moz-appearance:textfield;
+}
+
+textarea {
+  resize: none;
+}
+
 img {
   width: 100%;
 }
