--- a/src/app/product-details/variant-section/variant-section.component.html
+++ b/src/app/product-details/variant-section/variant-section.component.html
@@ -1,6 +1,6 @@
 <div class="variant-wrapper">
   <section *ngIf="colorVariants?.length" class="variant-option color">
-    <h3>Color:</h3>
+    <h3>Color</h3>
 
     <div class="option-flex">
       <button         
@@ -15,7 +15,7 @@
   </section>
 
   <section *ngIf="sizeVariants?.length" class="variant-option size">
-    <h3>Size:</h3>
+    <h3>Size</h3>
 
     <div class="option-flex">
       <button 
@@ -29,7 +29,7 @@
   </section>
 
   <section *ngIf="styleVariants?.length" class="variant-option style">
-    <h3>Style:</h3>
+    <h3>Style</h3>
 
     <div class="option-flex">
       <button 
@@ -43,7 +43,7 @@
   </section>
 
   <section *ngIf="modelVariants?.length" class="variant-option model">
-    <h3>Model:</h3>
+    <h3>Model</h3>
 
     <div class="option-flex">
       <button 
@@ -57,7 +57,7 @@
   </section>
 
   <section *ngIf="configurationVariants?.length" class="variant-option configuration">
-    <h3>Configuration:</h3>
+    <h3>Configuration</h3>
 
     <div class="option-flex">
       <button 
@@ -71,7 +71,7 @@
   </section>
 
   <section *ngIf="capacityVariants?.length" class="variant-option configuration">
-    <h3>Capacity:</h3>
+    <h3>Capacity</h3>
 
     <div class="option-flex">
       <button 
