--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -14,12 +14,12 @@
       <div class="product-information">  
         <div class="content">
           <div [class.reloading]="reolading">
-            <h3 class="product-name">{{ product?.productName }}</h3>
-            <p class="brand">By: <span>{{ product?.brand }}</span></p> 
-            <p class="price">
-              Price: <strong>{{ product?.price | currency }}</strong>
-            </p>
-
+            <h3 class="product-name-price">
+              {{ product?.productName }}
+              <span>{{ product?.price | currency }}</span>
+            </h3>
+            <p class="brand">By <span>{{ product?.brand }}</span></p> 
+  
             <div [ngSwitch]="product?.available" >
               <div *ngSwitchCase="false">
                 <p class="unavailable-message">Currently unavailable</p>
@@ -77,7 +77,7 @@
         </div>
   
         <div class="about-product" [class.reloading]="reolading">
-          <h3>About this item:</h3>          
+          <h3>About this item</h3>          
           <p [innerHTML]="product?.productDesc"></p>
         </div>
       </div>
