--- a/src/app/product-details/slider/slider.component.scss
+++ b/src/app/product-details/slider/slider.component.scss
@@ -1,19 +1,19 @@
 @mixin ease-gradient($deg) {
   background: linear-gradient(
     $deg,
-    hsl(347, 56%, 78%) 0%,
-    hsla(347, 56%, 78%, 0.738) 19%,
-    hsla(347, 56%, 78%, 0.541) 34%,
-    hsla(347, 56%, 78%, 0.382) 47%,
-    hsla(347, 56%, 78%, 0.278) 56.5%,
-    hsla(347, 56%, 78%, 0.194) 65%,
-    hsla(347, 56%, 78%, 0.126) 73%,
-    hsla(347, 56%, 78%, 0.075) 80.2%,
-    hsla(347, 56%, 78%, 0.042) 86.1%,
-    hsla(347, 56%, 78%, 0.021) 91%,
-    hsla(347, 56%, 78%, 0.008) 95.2%,
-    hsla(347, 56%, 78%, 0.002) 98.2%,
-    hsla(347, 56%, 78%, 0) 100%
+    hsl(229, 8%, 61%) 0%,
+    hsla(229, 8%, 61%, 0.738) 19%,
+    hsla(229, 8%, 61%, 0.541) 34%,
+    hsla(229, 8%, 61%, 0.382) 47%,
+    hsla(229, 8%, 61%, 0.278) 56.5%,
+    hsla(229, 8%, 61%, 0.194) 65%,
+    hsla(229, 8%, 61%, 0.126) 73%,
+    hsla(229, 8%, 61%, 0.075) 80.2%,
+    hsla(229, 8%, 61%, 0.042) 86.1%,
+    hsla(229, 8%, 61%, 0.021) 91%,
+    hsla(229, 8%, 61%, 0.008) 95.2%,
+    hsla(229, 8%, 61%, 0.002) 98.2%,
+    hsla(229, 8%, 61%, 0) 100%
   );
 }
 
@@ -64,7 +64,7 @@
         align-items: center;
         width: 40px;
         height: 40px;
-        color: #F72551;
+        color: #4c4e5a;
         border-radius: 40px;
         background-color: #fff;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -134,7 +134,7 @@
       
       &.active {
         position: relative;
-        border-color: rgba(248, 96, 129, 0.815);
+        border-color: #4c4e5a;
       
         &::after {              
           content: '';
