--- a/src/app/shared/star-rating/star-rating.component.html
+++ b/src/app/shared/star-rating/star-rating.component.html
@@ -12,4 +12,8 @@
   <button class="review-count">
     ({{ reviewCount | number }})
   </button>
+
+  <div class="review-card">
+    
+  </div>
 </div>
