--- a/src/styles.scss
+++ b/src/styles.scss
@@ -106,6 +106,24 @@ img {
   }
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
 .banner {
   position: relative;
   width: 100%;
