--- a/src/app/shared/star-rating/star-rating.component.scss
+++ b/src/app/shared/star-rating/star-rating.component.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  width: fit-content;
 
   .outer-stars {
     display: inline-block;
@@ -34,6 +35,7 @@
     font-size: .85rem;
     letter-spacing: 0.1rem;
   }
+
 }
 
 
