--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 * {
-  color: #333;
+  color: #4c4e5a;
   font-size: .9rem;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   box-sizing: border-box;
