--- a/src/app/admin-page/product-creation/product-creation.component.scss
+++ b/src/app/admin-page/product-creation/product-creation.component.scss
@@ -28,8 +28,9 @@
       width: 100%;
       height: 36px;
       color: #fff;
+      font-size: .85rem;
       border: 1px solid #F72551;
-      border-radius: 4px;
+      border-radius: 40px;
       background-color: #F72551;
       transition: opacity .4s ease, 
       background-color .4s ease;
