--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -158,11 +158,11 @@
           input[name="quantity"] {
             flex-shrink: 0;
             display: inline-block;
-            width: 70px;
+            width: 60px;
+            padding: 0.3rem 0.7rem;      
             margin-left: 0.2rem;
-            padding: 0.2rem;
             text-align: center;
-            border-radius: 6px;
+            border-radius: 4px;
             background-color: #f0f4ff;
           }
           
@@ -266,12 +266,12 @@
       .options {
       
         input[name="quantity"] {
-          margin: 0;
+          // margin: 0;
           margin-bottom: 0.4rem;
         }
 
         .remove-btn {
-          margin-left: 0 !important;
+          // margin-left: 0 !important;
         }
       }
     }
@@ -300,6 +300,10 @@
         border: 1px solid #F72551;
         border-radius: 40px;
         background-color: #F72551;
+
+        &::before {
+          content: none;
+        }
       }
     }
   }
