--- a/src/app/product-details/quantity-selector/quantity-selector.component.html
+++ b/src/app/product-details/quantity-selector/quantity-selector.component.html
@@ -6,7 +6,7 @@
   </button>
 
   <input 
-    (input)="quantity = +$event.target.value"
+    (change)="onChange(+$event.target.value)"
     type="number" class="quantity" [value]="quantity">
 
   <button 
