--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div (click)="overlayClick($event)" *ngIf="viewCart" class="overlay">
-  <section class="cart">
+  <aside class="cart">
     <div class="top">
       <p>Shopping Cart</p>
 
@@ -80,5 +80,5 @@
     </div>
 
     <app-spinner [loading]="isLoading"></app-spinner>
-  </section>
+  </aside>
 </div>
