--- a/src/app/shared/star-rating/star-rating.component.html
+++ b/src/app/shared/star-rating/star-rating.component.html
@@ -13,7 +13,7 @@
     ({{ reviewCount | number }})
   </button>
 
-  <div class="review-card">
-    
-  </div>
+  
 </div>
+
+<aside-panel></aside-panel>
