--- a/src/app/shared/star-rating/star-rating.component.html
+++ b/src/app/shared/star-rating/star-rating.component.html
@@ -1,4 +1,4 @@
-<div class="rating-wrapper">
+<div (click)="showRating = true" class="rating-wrapper">
   <div title="{{ rating }} out of 5 stars" class="outer-stars">
     <i *ngFor="let star of totalStars; index as index" 
       (click)="onClick(index + 1)" class="material-icons">grade</i>
@@ -17,4 +17,6 @@
 </div>
 
 <aside-panel
+  [showPanel]="showRating"
+  (showPanel)="showRating = $event"
   [heading]="'Rating & Reviews'"></aside-panel>
