--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,66 +1,27 @@
 .cart {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 550px;
-  height: 100%;
-  background-color: #fff;
-  box-shadow: -2px 0 20px rgba(0, 0, 0, 0.1);
-  animation: slideIn 0.3s ease;
-  overflow: hidden;
-
-  &.slide-out {
-    animation: slideOut 0.2s ease forwards;
-  }
+  justify-content: space-between;
+  width: 100%;
+  height: calc(100% - 138px);
 
   .empty-cart-msg {
     margin: 15rem auto;
     user-select: none;
     
     h3 {
-      color: #979eb3;
       font-size: 1rem;
       font-weight: 500;
-    }
-  }
-
-  .top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 66px;
-    padding: 0 1.5rem;
-
-    p {
-      color: #7a8196;
-    }
-
-    .close-btn {
-      margin-left: auto;
-
-      .material-icons {
-        color: #7a8196;
-        font-size: 1.3rem;
-        transition: color .4s ease;
-      }
-
-      &:hover {
-        .material-icons {
-          color: darken(#7a8196, 15);
-        }
-      }
     }
   }
 
   .content {
     position: relative;
     width: 100%;
-    height: calc(100vh - 132px);
+    height: 100%;
     padding: 0 1.5rem;
     animation: reveal 0.4s ease;
+    
 
     &::before {
       content: '';
@@ -203,8 +164,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 66px;
-    padding: 0 1.5rem;
+    padding: 1.5rem;
     border-top: thin solid #e7edff;
     background-color: #fff;
 
@@ -247,15 +207,7 @@
 
 @media (max-width: 500px) {
   .cart {
-    width: 100%;
-
-    .top {
-      height: 60px; 
-    }
-
-    .content {
-      height: calc(100vh - 175px); 
-    }
+    height: calc(100% - 192px);
 
     .product-info {
 
@@ -266,12 +218,7 @@
       .options {
       
         input[name="quantity"] {
-          // margin: 0;
           margin-bottom: 0.4rem;
-        }
-
-        .remove-btn {
-          // margin-left: 0 !important;
         }
       }
     }
@@ -279,8 +226,6 @@
     .bottom {
       flex-direction: column;
       justify-content: center;
-      height: 120px;
-      padding: 0.5rem 1.5rem;
 
       .subtotal {
         justify-content: space-between;
@@ -289,7 +234,7 @@
   
       .checkout-btn {
         margin: 0;
-        margin-top: 1rem;
+        margin-top: 1.5rem;
         position: relative;
         display: flex;
         justify-content: center;
