--- a/src/app/shared/aside-panel/aside-panel.component.scss
+++ b/src/app/shared/aside-panel/aside-panel.component.scss
@@ -20,11 +20,11 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 66px;
-    padding: 0 1.5rem;
+    padding: 1.5rem;
 
-    p {
+    .title {
       color: #7a8196;
+      font-weight: 400;
     }
 
     .close-btn {
@@ -42,5 +42,12 @@
         }
       }
     }
+  }
+}
+
+
+@media (max-width: 500px) {
+  .panel {
+    width: 100%;
   }
 }
