--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,18 +1,3 @@
-<!-- <div (click)="overlayClick($event)" *ngIf="viewCart" class="overlay">
-  <aside class="cart">
-    <div class="top">
-      <p>Shopping Cart</p>
-
-      <button 
-        (click)="onClose()" 
-        type="button" class="close-btn" title="Close">
-        <i class="material-icons">close</i>
-      </button>
-    </div>
-
-  </aside>
-</div> -->
-
 <aside-panel
   [heading]="heading"
   [showPanel]="viewCart"
@@ -76,7 +61,9 @@
       </ul>
     </div>
 
-    <div *ngIf="cartItems?.length && !isLoading" class="bottom">
+    <div 
+      *ngIf="cartItems?.length && !isLoading" 
+      class="bottom">
       <div class="subtotal">
         <span class="subtotal-items">Items: <strong>{{ itemCount | number }}</strong></span>
         <span class="subtotal-amount">Order Total: <strong>{{ subtotal | currency }}</strong></span>
