--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: calc(100% - 138px);
+  height: calc(100% - 68px);
 
   .empty-cart-msg {
     margin: 15rem auto;
@@ -20,8 +20,8 @@
     width: 100%;
     height: 100%;
     padding: 0 1.5rem;
+    padding-bottom: 70px;
     animation: reveal 0.4s ease;
-    
 
     &::before {
       content: '';
@@ -31,17 +31,6 @@
       width: 100%;
       height: 1rem;
       background: linear-gradient(#fff, transparent);
-      z-index: 1;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 1rem;
-      background: linear-gradient(transparent, #fff);
       z-index: 1;
     }
   }
@@ -100,7 +89,6 @@
 
         .price {
           margin-bottom: 0.5rem;
-          color: #333;
           font-size: 0.95rem;
           font-weight: 600;
         }
@@ -160,6 +148,9 @@
   }
 
   .bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -167,6 +158,17 @@
     padding: 1.5rem;
     border-top: thin solid #e7edff;
     background-color: #fff;
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: -1rem;
+      width: 100%;
+      height: 1rem;
+      background: linear-gradient(transparent, #fff);
+      z-index: 1;
+    }
 
     .subtotal {
       display: flex;
@@ -207,7 +209,9 @@
 
 @media (max-width: 500px) {
   .cart {
-    height: calc(100% - 192px);
+    .content {
+      padding-bottom: 124px;
+    }
 
     .product-info {
 
