--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -78,6 +78,7 @@
 
         .product-name {
           display: block;
+          width: fit-content;
           margin-bottom: 0.5rem;
           color: #2587f7;
           font-size: .95rem;
