--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,9 +117,11 @@ img {
 
 @keyframes slideOut {
   from {
+    opacity: 1;
     transform: translateX(0);
   }
   to {
+    opacity: 0;
     transform: translateX(100%);
   }
 }
