--- a/src/app/shared/star-rating/star-rating.component.scss
+++ b/src/app/shared/star-rating/star-rating.component.scss
@@ -35,5 +35,31 @@
     font-size: .85rem;
     letter-spacing: 0.1rem;
   }
+}
 
+.rating-container {
+  width: 100%;
+  height: 100%;
+  padding: 2rem 2.5rem;
+  // background-color: #4c4e5a;
+  overflow: hidden;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  .title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+
+  .rating {
+    margin-bottom: 0.5rem;
+    font-size: 2rem;
+  }
 }
