--- a/src/app/shared/star-rating/star-rating.component.html
+++ b/src/app/shared/star-rating/star-rating.component.html
@@ -19,7 +19,6 @@
   <div class="rating-container">
     <h3 class="title">Rating & Reviews</h3>
      
-
     <div>
       <h3 class="rating">{{ rating | number:'1.1-1' }}</h3>
       <div class="rating-wrapper">
@@ -36,6 +35,8 @@
         </button>
       </div>
     </div>
+
+    <rating-graph></rating-graph>
   </div>
 
 </aside-panel>
