--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -32,6 +32,8 @@
             <p class="stock-label">
               {{ product.totalStock > 0 ? 'In stock' : 'Not in stock' }}
             </p>
+
+            <!-- <star-rating [rating]="4.4"></star-rating> -->
           </div>
         </div>
 
