--- a/src/app/shared/star-rating/star-rating.component.html
+++ b/src/app/shared/star-rating/star-rating.component.html
@@ -21,7 +21,8 @@
      
     <div>
       <h3 class="rating">{{ rating | number:'1.1-1' }}</h3>
-      <div class="rating-wrapper">
+
+      <div class="rating-wrapper alt-style">
         <div class="outer-stars">
           <i *ngFor="let star of totalStars;" class="material-icons">grade</i>
           
