--- a/src/app/shared/star-rating/star-rating.component.scss
+++ b/src/app/shared/star-rating/star-rating.component.scss
@@ -4,12 +4,18 @@
   align-items: center;
   width: fit-content;
 
+  &.alt-style {
+    .outer-stars, button {
+      cursor: default;
+    }
+  }
+
   .outer-stars {
     display: inline-block;
     position: relative;
     white-space: nowrap;
     user-select: none;
-    cursor: pointer;
+    cursor: pointer;    
   
     .material-icons {
       font-size: 1rem;
