--- a/src/app/shared/star-rating/star-rating.component.html
+++ b/src/app/shared/star-rating/star-rating.component.html
@@ -1,43 +1,13 @@
-<div (click)="showRating = true" class="rating-wrapper">
+<div (click)="onClick()" class="rating-wrapper">
   <div title="{{ rating }} out of 5 stars" class="outer-stars">
-    <i *ngFor="let star of totalStars; index as index" 
-      (click)="onClick(index + 1)" class="material-icons">grade</i>
+    <i *ngFor="let star of totalStars;" class="material-icons">grade</i>
     
     <div [style.width.%]="rating | roundNearest:5:10" class="inner-stars">
-      <i *ngFor="let star of totalStars; index as index" 
-        (click)="onClick(index + 1)" class="material-icons">grade</i>
+      <i *ngFor="let star of totalStars;" class="material-icons">grade</i>
     </div>
   </div>
   
   <button class="review-count">
-    ({{ reviewCount | number }})
+    ({{ ratingCount | number }})
   </button>
 </div>
-
-<aside-panel [showPanel]="showRating" (showPanel)="showRating = $event">
-
-  <div class="rating-container">
-    <h3 class="title">Rating & Reviews</h3>
-     
-    <div>
-      <h3 class="rating">{{ rating | number:'1.1-1' }}</h3>
-
-      <div class="rating-wrapper alt-style">
-        <div class="outer-stars">
-          <i *ngFor="let star of totalStars;" class="material-icons">grade</i>
-          
-          <div [style.width.%]="rating | roundNearest:5:10" class="inner-stars">
-            <i *ngFor="let star of totalStars;" class="material-icons">grade</i>
-          </div>
-        </div>
-        
-        <button class="review-count">
-          ({{ reviewCount | number }})
-        </button>
-      </div>
-    </div>
-
-    <rating-graph></rating-graph>
-  </div>
-
-</aside-panel>
