--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -33,7 +33,7 @@
               {{ product.totalStock > 0 ? 'In stock' : 'Not in stock' }}
             </p>
 
-            <!-- <star-rating [rating]="4.4"></star-rating> -->
+            <star-rating [rating]="4.4"></star-rating>
           </div>
         </div>
 
