--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -34,7 +34,7 @@
             </div>   
             
             <!-- Product rating / review -->
-            <star-rating [rating]="4.3"></star-rating>
+            <star-rating [productId]="product.productId"></star-rating>
           </div>
 
           <variant-section 
