--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -5,11 +5,11 @@
     <h3 class="title">Rating & Reviews</h3>
      
     <div>
-      <h3 class="rating">{{ productRating | number:'1.1-1' }}</h3>
+      <h3 class="rating">{{ rating.totalReviews | number:'1.1-1' }}</h3>
 
       <star-rating 
         [readonly]="true"
-        [rating]="4.3"></star-rating>
+        [overall]="rating.overall"></star-rating>
       <rating-graph></rating-graph>
     </div>
   </div>
