--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -1,11 +1,11 @@
 <aside-panel [showPanel]="viewRatings" (showPanel)="viewRatings = $event">
   <app-spinner [loading]="isLoading"></app-spinner>
 
-  <div class="rating-container">
+  <div *ngIf="!isLoading && rating" class="rating-container">
     <h3 class="title">Rating & Reviews</h3>
      
     <div>
-      <h3 class="rating">{{ rating.totalReviews | number:'1.1-1' }}</h3>
+      <h3 class="rating">{{ rating?.overall | number:'1.1-1' }}</h3>
 
       <star-rating 
         [readonly]="true"
