--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -16,9 +16,7 @@
 
     <!-- | date:'EEEE - MMMM dd y' -->
 
-    <section *ngIf="!isLoading" class="reviews">
-
-    </section>
+    <review-section [reviews]="reviews"></review-section>
   </div>
 
 </aside-panel>
