--- a/src/app/product-ratings/product-ratings.component.scss
+++ b/src/app/product-ratings/product-ratings.component.scss
@@ -1,7 +1,7 @@
 .rating-container {
   width: 100%;
   height: 100%;
-  padding: 2rem 2.5rem;
+  padding: 2rem 2.5rem 5rem;
   overflow: hidden;
   overflow-y: auto;
   scrollbar-width: none;
