--- a/src/app/product-ratings/product-ratings.component.html
+++ b/src/app/product-ratings/product-ratings.component.html
@@ -7,7 +7,10 @@
      
         <h3 class="rating">{{ rating.overall | number:'1.1-1' }}</h3>
 
-        <star-rating [readonly]="true" [overall]="rating.overall"></star-rating>
+        <star-rating 
+          [readonly]="true" 
+          [overall]="rating.overall"
+          [totalReviews]="rating.totalReviews"></star-rating>
 
         <rating-graph *ngIf="!isLoading"></rating-graph>
     </div>
