--- a/src/app/product-ratings/review-section/review-section.component.html
+++ b/src/app/product-ratings/review-section/review-section.component.html
@@ -25,5 +25,25 @@
       </article>
     </div>    
 
+    <div class="action-buttons">
+      <span class="label">Helpful?</span>
+
+      <div class="btn-wrapper">
+        <button class="like-btn">
+          <i class="material-icons">thumb_up_alt</i>
+        </button>
+
+        <span class="count">6</span>
+      </div>
+
+      <div class="btn-wrapper">
+        <button class="dislike-btn">
+          <i class="material-icons">thumb_down_alt</i>
+        </button>
+
+        <span class="count">1</span>
+      </div>
+      
+    </div>
   </div>
 </section>
