--- a/src/app/product-ratings/rating-graph/rating-graph.component.scss
+++ b/src/app/product-ratings/rating-graph/rating-graph.component.scss
@@ -3,21 +3,25 @@
 }
 
 .rating-per-start-graph {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
+  height: auto;
   margin-top: 3rem;
+  user-select: none;
 
-  .bar-wrapper {
+  .star-label-wrapper,
+  .bars-wrapper,
+  .star-total-wrapper {
     display: flex;
-    align-items: center;
-    width: 100%;
+    flex-direction: column;
+  }
 
-    &:not(:last-child) {
-      margin-bottom: 1rem;
-    }
-
-    .material-icons {
-      font-size: 0.6rem;
-    }
+  .star-label-wrapper {
+    flex-shrink: 0;
+    width: 20px;
+    height:  100%;
+    margin-right: 0.5rem;
 
     .star-icon-label {
       flex-shrink: 0;
@@ -26,17 +30,31 @@
       align-items: center;
       width: 20px;
 
+      &:not(:last-child) {
+        margin-bottom: 0.7rem;
+      }
+
+      .material-icons {
+        font-size: 0.6rem;
+      }
+
       .label {
         margin-right: 0.1rem;
         font-size: .75rem;
       }
     }
+  }
+
+  .bars-wrapper {
+    justify-content: space-between;
+    width: 85%;
+    min-height: 100%;
+    margin-right: 0.5rem;
 
     .outer-bar {
       position: relative;
-      width: 85%;
+      width: 100%;
       height: 9px;
-      margin: 0 1rem 0 0.5rem;
       border-radius: 1rem;
       background-color: #e9ebf1;
       overflow: hidden;
@@ -53,10 +71,21 @@
         animation: fillIn 0.7s ease;
       }
     }
+  }
+
+  .star-total-wrapper {
+    flex-shrink: 0;
+    width: fit-content;
 
     .star-total-reviews {
       font-size: .75rem;
+      text-align: right;
+
+      &:not(:last-child) {
+        margin-bottom: 0.7rem;
+      }
     }
   }
+
 }
 
