--- a/src/app/product-ratings/rating-graph/rating-graph.component.scss
+++ b/src/app/product-ratings/rating-graph/rating-graph.component.scss
@@ -54,7 +54,7 @@
     .outer-bar {
       position: relative;
       width: 100%;
-      height: 9px;
+      height: 7px;
       border-radius: 1rem;
       background-color: #e9ebf1;
       overflow: hidden;
@@ -67,7 +67,8 @@
         height: 100%;
         border-radius: 1rem;
         transition: width .4s ease;
-        background-color: #2587f7;
+        // background-color: #2587f7;
+        background-color: #e9b659;
         animation: fillIn 0.7s ease;
       }
     }
