--- a/src/app/product-ratings/rating-graph/rating-graph.component.scss
+++ b/src/app/product-ratings/rating-graph/rating-graph.component.scss
@@ -68,7 +68,7 @@
         border-radius: 1rem;
         transition: width .4s ease;
         // background-color: #2587f7;
-        background-color: #e9b659;
+        background-color: #fdc151;
         animation: fillIn 0.7s ease;
       }
     }
